--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,17 @@
 server:
   port: 8081
 spring:
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ppoiuy1451@gmail.com
+    password: ztyxelusrrcnhirt
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
   mvc:
     view:
       prefix: /WEB-INF/jsp/
@@ -13,3 +24,11 @@ spring:
     password: 
 mybatis:
   type-aliases-package: com.KoreaIT.cwy.demo.vo
+custom:
+  siteName: SB_AM_04
+  siteMainUri: http://localhost:8081
+  emailFrom: no-reply@localhost
+  emailFromName: SB_AM_04
+  logging:
+    dir: log
+    level: debug
